# job-finder-ai-agnet

./: .dockerignore  .gitignore  DEVELOPMENT.md  Makefile  PLANS.md  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.yml  docker-status.sh  package-lock.json  package.json  plan-1.1.md  plan-1.2.md  plan-1.3.md  plan-1.4.md  plan-1.5.md  plan-1.6.md  plan-2.1.md  plan-2.2.md  plan-2.3.md  plan-2.4.md  plan-2.5.md  plan-3.1.md  plan-3.2.md  plan-3.3.md  plan-3.4.md  plan-3.5.md  plan-4.1.md  plan.md  start-docker.sh  stop-docker.sh
ai-orchestrator/: README.md  pyproject.toml
ai-orchestrator/scripts/: setup.sh
ai-orchestrator/src/: __init__.py
ai-orchestrator/src/agents/: __init__.py  agent_registry.py  base_agent.py
ai-orchestrator/src/graphs/: __init__.py  matching_graph.py  resume_graph.py
ai-orchestrator/src/services/: __init__.py  embedding_service.py  llm_service.py
ai-orchestrator/src/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  minimax_provider.py  openai_provider.py
ai-orchestrator/src/utils/: __init__.py  helpers.py
ai-orchestrator/tests/: test_agents.py  test_graphs.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  package.json  tsconfig.json
backend/src/: index.ts
backend/src/app/: health.ts  prisma.ts  routes.ts  server.ts
frontend/: .env.local.example  .gitignore  next.config.js  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: ToasterProvider.tsx
frontend/src/lib/: api.ts
(+108 files in other folders)
