[tool.poetry]
name = "jobfind-ai-orchestrator"
version = "0.1.0"
description = "AI Orchestrator for JobFind - Resume parsing, embedding, matching"
authors = ["JobFind Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# LangChain & LangGraph
langchain = "^0.1.0"
langchain-core = "^0.1.0"
langchain-openai = "^0.0.5"
langchain-anthropic = "^0.1.0"
langgraph = "^0.0.20"
langgraph-sdk = "^0.0.10"

# AI Providers
openai = "^1.10.0"
anthropic = "^0.18.0"

# Document parsing
pypdf = "^4.0.0"
python-docx = "^1.1.0"

# Vector store
chromadb = "^0.4.22"

# HTTP client
httpx = "^0.26.0"

# Web server
fastapi = "^0.109.0"
uvicorn = "^0.27.0"

# Utilities
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"